--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
     "@swimlane/ngx-charts": "^13.0.2",
     "@swimlane/ngx-datatable": "^16.0.3",
+    "@types/jspdf": "^2.0.0",
     "angular-count-to": "0.0.3",
     "angular-mydatepicker": "^0.11.5",
     "bootstrap": "^4.4.1",
@@ -36,6 +37,8 @@
     "flag-icons": "^2.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
     "mousetrap": "^1.6.5",
     "mydatepicker": "^2.6.11",
     "ng-animate": "^0.3.4",
@@ -60,9 +63,9 @@
     "@angular/compiler-cli": "~13.0.3",
     "@angular/language-service": "~13.0.3",
     "@types/chart.js": "^2.9.13",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
